<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.0">
  <GVL Name="GVL" Id="{84a442da-4cfd-4a55-aa9d-93a5d7a48441}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	SystemTime							:WORD;
	SystemTimeM							:WORD;
	SystemTimeMs						:WORD;
	LeftAirJet							:BOOL;
	RightAirJet							:BOOL;
	AirJet1								:BOOL;
	AirJet2								:BOOL;
	ArduinoState 				AT %Q*	:USINT		:=0;//byte out 0
	OutArduino					AT %Q*	:USINT;//byte out 2
	FanDyno						AT %Q*	:USINT		:=0; //byte out 1
	CounterVal					AT %I*	:UDINT;
	SetCounter					AT %Q*	:BOOL;
	SetCounterVal				AT %Q*	:UDINT;
	EnableMotor					AT %Q*	:BOOL;//stm enable
	ResetMotor					AT %Q*	:BOOL;
	ReduceTorqueMotor			AT %Q*	:BOOL;
	ExecutePosMotor				AT %Q*	:BOOL;
	EmergencyStopMotor			AT %Q*	:BOOL;
	TargetPosMotor				AT %Q*	:UDINT;
	VelocityMotor 				AT %Q*	:INT;
	AccelMotor 					AT %Q*	:INT := 150;
	DecelMotor 					AT %Q*	:INT :=150;
	StartTypeMotor				AT %Q*	:UINT;
	MotorPos					AT %I*	:UDINT;
	StepperUp							:BOOL;
	StepperDown							:BOOL;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>